Fixed missing navbar in share data (by add main container padding, hidden scrollbar for all pages.

--- a/app/static/css/visualise.css
+++ b/app/static/css/visualise.css
@@ -42,7 +42,7 @@ body, html {
     flex-direction: row;
     height: 100vh;
     width: 100vw;
-    padding: 20px;
+    padding: 60px;
     gap: 20px;
     box-sizing: border-box;
 }
